fix the dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     height: 100%;
     left: 0;
     top: 0;
+    overflow: scroll;
 
 }
 
